--- a/CoMS/CoMS/CoMS.csproj
+++ b/CoMS/CoMS/CoMS.csproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -201,195 +202,86 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PaperAbstractController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="Entities Framework\ACCOUNT.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\ACCOUNT_CONFERENCE_REGISTRATION_PACKAGE_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\ACCOUNT_FOR_CONFERENCE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\ALL_TYPE_NAME.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_GENDER_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_LINE_OF_BUSINESS.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_TYPES.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\AUTHOR.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\AUTHOR_PAPER_ABSTRACT_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\AUTHOR_PAPER_TEXT_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE_IN_REGISTERED_CONFERENCE_SESSION.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_BOARD_OF_REVIEW.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_FIELD_OF_STUDY_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_PRESENTATION_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_CONDITIONS.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_OFFERING.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_OFFERING_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SESSION.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SESSION_CHAIR.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SESSION_CHAIR_CONFERENCE_SESSION_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SESSION_PAPER_PRESENTATION_SLOT.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SESSION_TOPIC.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_SETTING_RIGHTS.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\CONFERENCE_TYPE_OF_STUDY_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\COUNTRY.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\DB.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\DB.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\DB.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DB.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\FACILITY.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\FIELD_OF_STUDY.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\GENDER_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\LINE_OF_BUSINES_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_FUNCTION.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_FUNCTION_FOR_MOBILEFORM_MENU.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_GROUP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_GROUP_ACCOUNT_FOR_CONFERENCE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_GROUP_FUNCTION_FOR_CONFERENCE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_GROUP_MENU_FOR_CONFERENCE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\MOBILEFORM_MENU.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\ORGANIZATION.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PAPER_ABSTRACT.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PAPER_REVIEW_SUMUP_BY_CONFERENCE_BOARD_OF_REVIEW.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PAPER_TEXT.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PERSON.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PRESENTER.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\PRESENTER_CONFERENCE_SESSION_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\REGISTERED_CONFERENCE_SESSION_IN_CONFERENCE_REGISTRATION_PACKAGE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\REVIEWER.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\REVIEWER_PAPER_ABSTRACT_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\REVIEWER_PAPER_TEXT_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\SESSION_TOPIC_CONFERENCE_PRESENTATION_TYPE.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\SUPPORT_STAFF.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\SUPPORT_STAFF_CONFERENCE_SESSION_RELATIONSHIP.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entities Framework\TYPE_OF_STUDY.cs">
-      <DependentUpon>DB.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Entities Framework\ACCOUNT.cs" />
+    <Compile Include="Entities Framework\ACCOUNT_CONFERENCE_REGISTRATION_PACKAGE_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\ACCOUNT_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\ALL_TYPE_NAME.cs" />
+    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_GENDER_TYPE.cs" />
+    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_LINE_OF_BUSINESS.cs" />
+    <Compile Include="Entities Framework\APPROVED_CONFERENCE_ATTENDEE_TYPES.cs" />
+    <Compile Include="Entities Framework\AUTHOR.cs" />
+    <Compile Include="Entities Framework\AUTHOR_PAPER_ABSTRACT_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\AUTHOR_PAPER_TEXT_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\CONFERENCE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE_IN_REGISTERED_CONFERENCE_SESSION.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_ATTENDEE_TYPE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_BOARD_OF_REVIEW.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_FIELD_OF_STUDY_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_PRESENTATION_TYPE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_CONDITIONS.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_OFFERING.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_REGISTRATION_PACKAGE_OFFERING_TYPE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SESSION.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SESSION_CHAIR.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SESSION_CHAIR_CONFERENCE_SESSION_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SESSION_PAPER_PRESENTATION_SLOT.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SESSION_TOPIC.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_SETTING_RIGHTS.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_TYPE.cs" />
+    <Compile Include="Entities Framework\CONFERENCE_TYPE_OF_STUDY_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\COUNTRY.cs" />
+    <Compile Include="Entities Framework\DB.cs" />
+    <Compile Include="Entities Framework\FACILITY.cs" />
+    <Compile Include="Entities Framework\FIELD_OF_STUDY.cs" />
+    <Compile Include="Entities Framework\GENDER_TYPE.cs" />
+    <Compile Include="Entities Framework\LINE_OF_BUSINES_TYPE.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_FUNCTION.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_FUNCTION_FOR_MOBILEFORM_MENU.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_GROUP.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_GROUP_ACCOUNT_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_GROUP_FUNCTION_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_GROUP_MENU_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\MOBILEFORM_MENU.cs" />
+    <Compile Include="Entities Framework\ORGANIZATION.cs" />
+    <Compile Include="Entities Framework\PAPER_ABSTRACT.cs" />
+    <Compile Include="Entities Framework\PAPER_REVIEW_SUMUP_BY_CONFERENCE_BOARD_OF_REVIEW.cs" />
+    <Compile Include="Entities Framework\PAPER_TEXT.cs" />
+    <Compile Include="Entities Framework\PERSON.cs" />
+    <Compile Include="Entities Framework\PRESENTER.cs" />
+    <Compile Include="Entities Framework\PRESENTER_CONFERENCE_SESSION_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\REGISTERED_CONFERENCE_SESSION_IN_CONFERENCE_REGISTRATION_PACKAGE.cs" />
+    <Compile Include="Entities Framework\REVIEWER.cs" />
+    <Compile Include="Entities Framework\REVIEWER_PAPER_ABSTRACT_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\REVIEWER_PAPER_TEXT_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\SESSION_TOPIC_CONFERENCE_PRESENTATION_TYPE.cs" />
+    <Compile Include="Entities Framework\SUPPORT_STAFF.cs" />
+    <Compile Include="Entities Framework\SUPPORT_STAFF_CONFERENCE_SESSION_RELATIONSHIP.cs" />
+    <Compile Include="Entities Framework\TYPE_OF_STUDY.cs" />
+    <Compile Include="Entities Framework\WEBFORM_FUNCTION.cs" />
+    <Compile Include="Entities Framework\WEBFORM_FUNCTION_FOR_WEBFORM_MENU.cs" />
+    <Compile Include="Entities Framework\WEBFORM_GROUP.cs" />
+    <Compile Include="Entities Framework\WEBFORM_GROUP_ACCOUNT_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WEBFORM_GROUP_FUNCTION_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WEBFORM_GROUP_MENU_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WEBFORM_MENU.cs" />
+    <Compile Include="Entities Framework\WINFORM_FUNCTION.cs" />
+    <Compile Include="Entities Framework\WINFORM_FUNCTION_FOR_WINFORM_MENU.cs" />
+    <Compile Include="Entities Framework\WINFORM_GROUP.cs" />
+    <Compile Include="Entities Framework\WINFORM_GROUP_ACCOUNT_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WINFORM_GROUP_FUNCTION_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WINFORM_GROUP_MENU_FOR_CONFERENCE.cs" />
+    <Compile Include="Entities Framework\WINFORM_MENU.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AccountModel.cs" />
+    <Compile Include="Models\PersonModel.cs" />
     <Compile Include="Models\ResponseData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\StringResource.Designer.cs">
@@ -409,16 +301,6 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Entities Framework\DB.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>DB.Context.cs</LastGenOutput>
-      <DependentUpon>DB.edmx</DependentUpon>
-    </Content>
-    <Content Include="Entities Framework\DB.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>DB.edmx</DependentUpon>
-      <LastGenOutput>DB.cs</LastGenOutput>
-    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -447,19 +329,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
-    <EntityDeploy Include="Entities Framework\DB.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>DB.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Entities Framework\DB.edmx.diagram">
-      <DependentUpon>DB.edmx</DependentUpon>
-    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Views\Template\Email.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
