--- a/CoMS/CoMS/Web.config
+++ b/CoMS/CoMS/Web.config
@@ -13,6 +13,13 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--Email Config-->
+    <add key="FromEmailAddress" value="poscantho@gmail.com"/>
+    <add key="FromEmailDisplayName" value="CoMS"/>
+    <add key="FromEmailPassword" value="PosCanTho" />
+    <add key="SMTPHost" value="smtp.gmail.com"/>
+    <add key="SMTPPort" value="587"/>
+    <add key="EnableSSL" value="true"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -77,7 +84,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DB" connectionString="metadata=&quot;res://*/Entities Framework.DB.csdl|res://*/Entities Framework.DB.ssdl|res://*/Entities Framework.DB.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.69.69.193;initial catalog=CONFERENCE_MANAGEMENT_SYSTEM;user id=sa;password=a123456789*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB" connectionString="data source=10.69.69.193;initial catalog=CONFERENCE_MANAGEMENT_SYSTEM;user id=sa;password=a123456789*;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
