--- a/CoMS/CoMS/Web.config
+++ b/CoMS/CoMS/Web.config
@@ -89,7 +89,8 @@
   </system.codedom>
   <connectionStrings>
     <add name="DB" connectionString="data source=10.69.69.193;initial catalog=CONFERENCE_MANAGEMENT_SYSTEM;user id=sa;password=a123456789*;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="MYDB" connectionString="data source=PC_THIEN;initial catalog=COMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="MYDB" connectionString="data source=PC_THIEN;initial catalog=COMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
