--- a/CoMS/CoMS/CoMS.csproj
+++ b/CoMS/CoMS/CoMS.csproj
@@ -237,17 +237,30 @@
     <Compile Include="Authentization\OAuthAppProvider.cs" />
     <Compile Include="Authentization\Startup.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AuthorAbstractController.cs" />
+    <Compile Include="Controllers\AuthorPaperTextController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\BookmarkController.cs" />
     <Compile Include="Controllers\ConferenceController.cs" />
+    <Compile Include="Controllers\ManageDeviceController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
+    <Compile Include="Controllers\NotificationController.cs" />
+    <Compile Include="Controllers\PaperAbstractController.cs" />
     <Compile Include="Controllers\RegistrationController.cs" />
+    <Compile Include="Controllers\ReviewPaperAbstractsController.cs" />
     <Compile Include="Controllers\ScheduleController.cs" />
+    <Compile Include="Entities Framework\Bookmark.cs" />
+    <Compile Include="Entities Framework\Conference_Location.cs" />
+    <Compile Include="Entities Framework\Conference_Map.cs" />
+    <Compile Include="Entities Framework\Conversation_Reply.cs" />
+    <Compile Include="Entities Framework\Manage_Device.cs" />
     <Compile Include="Entities Framework\MYDB.cs" />
+    <Compile Include="Entities Framework\Notification.cs" />
+    <Compile Include="Models\AuthorAbstractModel.cs" />
+    <Compile Include="Models\AuthorPaperTextModel.cs" />
     <Compile Include="Models\BookmarkModel.cs" />
     <Compile Include="Controllers\ChatController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PaperAbstractController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Entities Framework\ACCOUNT.cs" />
     <Compile Include="Entities Framework\ACCOUNT_CONFERENCE_REGISTRATION_PACKAGE_RELATIONSHIP.cs" />
     <Compile Include="Entities Framework\ACCOUNT_FOR_CONFERENCE.cs" />
@@ -258,7 +271,6 @@
     <Compile Include="Entities Framework\AUTHOR.cs" />
     <Compile Include="Entities Framework\AUTHOR_PAPER_ABSTRACT_RELATIONSHIP.cs" />
     <Compile Include="Entities Framework\AUTHOR_PAPER_TEXT_RELATIONSHIP.cs" />
-    <Compile Include="Entities Framework\BOOKMARK.cs" />
     <Compile Include="Entities Framework\CONFERENCE.cs" />
     <Compile Include="Entities Framework\CONFERENCE_ATTENDEE.cs" />
     <Compile Include="Entities Framework\CONFERENCE_ATTENDEE_IN_REGISTERED_CONFERENCE_SESSION.cs" />
@@ -278,8 +290,6 @@
     <Compile Include="Entities Framework\CONFERENCE_SETTING_RIGHTS.cs" />
     <Compile Include="Entities Framework\CONFERENCE_TYPE.cs" />
     <Compile Include="Entities Framework\CONFERENCE_TYPE_OF_STUDY_RELATIONSHIP.cs" />
-    <Compile Include="Entities Framework\CONVERSATION.cs" />
-    <Compile Include="Entities Framework\CONVERSATION_REPLY.cs" />
     <Compile Include="Entities Framework\COUNTRY.cs" />
     <Compile Include="Entities Framework\DB.cs" />
     <Compile Include="Entities Framework\FACILITY.cs" />
@@ -326,10 +336,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModel.cs" />
+    <Compile Include="Models\ConferenceMapModel.cs" />
     <Compile Include="Models\ConversationReplyModel.cs" />
+    <Compile Include="Models\ManageDeviceModel.cs" />
+    <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Models\PersonModel.cs" />
     <Compile Include="Models\RegistrationModel.cs" />
     <Compile Include="Models\ResponseData.cs" />
+    <Compile Include="Models\ReviewPaperAbstractModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\StringResource.Designer.cs">
       <AutoGen>True</AutoGen>
